--- a/requirements.txt
+++ b/requirements.txt
@@ -3,6 +3,7 @@ Markdown==2.3.1
 South==0.8.3
 argparse==1.2.1
 distribute==0.6.24
+django-cors-headers==0.12
 django-filter==0.7
 djangorestframework==2.3.9
 psycopg2==2.5.1
