--- a/requirements.txt
+++ b/requirements.txt
@@ -2,7 +2,7 @@ Django==1.6
 Markdown==2.3.1
 South==0.8.3
 argparse==1.2.1
-distribute==0.6.24
+# distribute==0.6.24
 dj-database-url==0.2.2
 dj-static==0.0.5
 django-cors-headers==0.12
